--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 body {
-  background-image: url("../img/background.jpeg");
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("../img/background.jpeg");
   background-size: cover;
-  background-repeat: repeat-y;
+  background-repeat: no-repeat;
 }
 .bg-image {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
@@ -10,7 +11,13 @@ body {
   background-repeat: no-repeat;
   overflow: auto;
 }
-
+.bg-image-2 {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("../img/background.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: auto;
+}
 .transparent {
   background: transparent;
 }
@@ -45,4 +52,22 @@ body {
 }
 .rounded {
   border-radius: 10px !important;
+}
+
+.darken {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+}
+
+.stats {
+  font-size: 2em !important;
+  font-weight: bold;
+}
+
+form {
+  display: inline-block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  text-align: left !important;
+  border-radius: 50px;
+  padding: 20em !important;
 }
