--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,29 @@ form {
   margin-left: auto !important;
   margin-right: auto !important;
   text-align: left !important;
-  border-radius: 50px;
+  border-radius: 25px;
   padding: 20em !important;
+}
+
+@media (min-width: 576px) {
+  form {
+    display: block !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    text-align: left !important;
+    border-radius: 25px;
+    padding: 20em !important;
+    width: 500px;
+  }
+}
+
+@media (min-width: 768px) {
+  form {
+    display: block !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    text-align: left !important;
+    border-radius: 25px;
+    padding: 20em !important;
+  }
 }
