--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,9 @@ body {
 .darken {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
 }
-
+.text-darken {
+  color: rgba(255, 255, 255, 0.75) !important;
+}
 .stats {
   font-size: 2em !important;
   font-weight: bold;
