--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
     url("../img/background.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 .bg-image {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
@@ -11,6 +12,15 @@ body {
   background-repeat: no-repeat;
   overflow: auto;
 }
+
+.bg-form {
+  background: url("../img/hiclipart.com.png");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: auto;
+}
+
 .bg-image-2 {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
     url("../img/background.jpeg");
@@ -53,7 +63,9 @@ body {
 .rounded {
   border-radius: 10px !important;
 }
-
+.rounded-lg {
+  border-radius: 25px !important;
+}
 .darken {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
 }
@@ -65,34 +77,22 @@ body {
   font-weight: bold;
 }
 
-form {
-  display: inline-block !important;
-  margin-left: auto !important;
-  margin-right: auto !important;
-  text-align: left !important;
-  border-radius: 25px;
-  padding: 20em !important;
-}
-
 @media (min-width: 576px) {
-  form {
+  form.main-form {
     display: block !important;
     margin-left: auto !important;
     margin-right: auto !important;
     text-align: left !important;
     border-radius: 25px;
-    padding: 20em !important;
     width: 500px;
   }
-}
 
-@media (min-width: 768px) {
-  form {
+  #contact-form {
     display: block !important;
     margin-left: auto !important;
     margin-right: auto !important;
     text-align: left !important;
     border-radius: 25px;
-    padding: 20em !important;
+    width: 500px;
   }
 }
